# uvx-static-assets-test

./: .gitignore  findings.md  main.py  prompts.md  pyproject.toml
src/uvx_static_assets_test/: __init__.py  cli.py
src/uvx_static_assets_test/templates/: message.txt
tests/: test_cli.py
