[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "uvx-static-assets-test"
version = "0.1.0"
description = "Smallest practical uvx proof that a GitHub repo can ship a static asset."
readme = "findings.md"
requires-python = ">=3.12"

[project.scripts]
uvx-static-assets-test = "main:main"

[tool.setuptools]
py-modules = ["main"]

[tool.setuptools.data-files]
"." = ["messages.txt"]
